test/errors/multiple_errors.sg
' Test multiple syntax errors
(def test1 "unterminated
(def test2 [foo bar})
